# school_manager_docker

./: .dockerignore  .gitignore  Dockerfile.client  Dockerfile.client.prod  Dockerfile.database  Dockerfile.server  Dockerfile.server.prod  create_table.sql  docker-compose.prod.yml  docker-compose.yml  problème_rentrontes.txt
.github/workflows/: ci-cd.yml
client/: index.html  package.json  vite.config.ts
client/src/: App.tsx  StudentsList.tsx
client/src/api/: apiClient.ts  services.ts
client/src/components/: MarksTable.tsx  StudentsTable.tsx  TeachersTable.tsx
server/: database.py  database_service.py  main.py  pyproject.toml
server/models/: __init__.py  mark.py  student.py  teacher.py
server/router/: marks.py  students.py  teachers.py
server/tests/: conftest.py  test_main.py
