[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["yann97one <yannissileber@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = {extras = ["standard"], version = ">=0.115.0"}
sqlmodel = ">=0.0.37"
sqlalchemy = ">=2.0.0"
pymysql = ">=1.1.2"
python-dotenv = ">=1.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"